# katib

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
core/: models.py  project_manager.py
docs/: appimage-packaging.md  change-workflow.md  windows-packaging.md
packaging/linux/: katib-appimage.spec  katib.desktop
services/: markdown_service.py  settings_service.py
ui/: editor.py  file_tree.py  main_window.py  markdown_highlighter.py  preview.py  theme.py  vim_mode.py
