[project]
name = "katib"
version = "0.1.0"
description = "Minimal distraction-free Markdown writing app built with PySide6."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linkify-it-py>=2.0.0",
    "markdown-it-py>=3.0.0",
    "markdown-pdf>=1.13.1",
    "mdit-py-plugins>=0.4.0",
    "PySide6>=6.9.0",
    "Pygments>=2.19.0",
]

[project.scripts]
katib = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "core", "services", "ui"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/core",
    "/services",
    "/ui",
    "/README.md",
    "/pyproject.toml",
]

[tool.uv]
package = true
